Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-17084

incorrect comparision in lod_striping_load()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.16.0
    • None
    • None
    • 3
    • 9223372036854775807

      code generation depending on type conversion, notice (int) in the first case.

      if (rc > (int)sizeof(struct lmv_foreign_md)):

      00000000000146df <lod_striping_load+0x2df> cmp    $0x10,%eax
      00000000000146e4 <lod_striping_load+0x2e4> jg     000000000001477b <lod_striping_load+0x37b>
      

      if (rc > sizeof(struct lmv_foreign_md)):

      00000000000146df <lod_striping_load+0x2df> cmp    $0x10,%eax
      00000000000146e4 <lod_striping_load+0x2e4> ja     000000000001477b <lod_striping_load+0x37b>
      

            bzzz Alex Zhuravlev
            bzzz Alex Zhuravlev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: